--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "vue2-flip-countdown": "^0.12.1",
     "vue2-leaflet": "2.5.2",
     "vuedraggable": "2.24.3",
+    "vuejs-ace-editor": "^1.0.1",
     "vuex": "3.6.0"
   },
   "devDependencies": {
